Add checkstyle configuration

--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,16 @@ allprojects {
   repositories {
     jcenter()
   }
+
+  apply plugin: 'checkstyle'
+
+  task checkstyle(type: Checkstyle) {
+    configFile file("${project.rootDir}/config/checkstyle/checkstyle.xml")
+    source 'src'
+    include '**/*.java'
+    exclude '**/gen/**'
+
+    classpath = files()
+  }
 }
+
