--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
   <application
       android:allowBackup="true"
-      android:icon="@mipmap/ic_launcher"
+      android:icon="@mipmap/ic_logo_karumi"
       android:label="@string/app_name">
     <activity
         android:name=".MainActivity"
