Add support to deploy library artifact to Maven Central

--- a/expandableselector/build.gradle
+++ b/expandableselector/build.gradle
@@ -10,6 +10,4 @@ android {
   }
 }
 
-dependencies {
-
-}
+apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
