--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 POM_NAME=ExpandableSelector
 POM_ARTIFACT_ID=expandableselector
 POM_PACKAGING=aar
-VERSION_NAME=1.0.0
-VERSION_CODE=100000
+VERSION_NAME=1.0.1-SNAPSHOT
+VERSION_CODE=100001
 GROUP=com.karumi
 
 POM_DESCRIPTION=ExpandableSelector is an Android library created to show a list of Button/ImageButton widgets inside a animated container which can be collapsed or expanded.
