--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 POM_NAME=ExpandableSelector
 POM_ARTIFACT_ID=expandableselector
 POM_PACKAGING=aar
-VERSION_NAME=1.0.1-SNAPSHOT
+VERSION_NAME=1.1.0
 VERSION_CODE=100001
 GROUP=com.karumi
 
